# libbase

./: .gitignore  CMakeLists.txt  ReadMe.md
base/: CMakeLists.txt  base.VC.VC.opendb  base.sln  base.vcxproj  base.vcxproj.filters  zx_base64.cc  zx_dir.cc  zx_encoder.cc  zx_except.cc  zx_file.cc  zx_getopt.cc  zx_http.cc  zx_json.cc  zx_logger.cc  zx_md5.cc  zx_proc.cc  zx_shm.cc  zx_str.cc  zx_thread_mutex.cc  zx_threads.cc  zx_time.cc  zx_urlencode.cc  zx_urlparse.cc  zx_utils.cc  zx_zip.cc
base/log/: MSThreads.cpp  MSThreads.h  PThreads.cpp  PThreads.h  appender.cpp  appender.h  appendersfactory.cpp  appendersfactory.h  consoleappender.cpp  consoleappender.h  factoryparams.cpp  factoryparams.h  fileappender.cpp  fileappender.h  log_wrapper.cpp  log_wrapper.h  rollingfileappender.cpp  rollingfileappender.h
base/minizip/: iowin32.c  miniunz.c  unzip.c
base/x64/Debug/: vc140.idb
base/x64/Debug/base.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  base.lastbuildstate
base/x64/Release/: ConsoleApplication1.iobj  ConsoleApplication1.ipdb  base.exp  base.iobj  base.ipdb  base.lib
base/x64/Release/base.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  base.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
base/x64/Release/libbase.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
include/: zx_base.h  zx_base64.h  zx_dir.h  zx_encoder.h  zx_except.h  zx_file.h  zx_getopt.h  zx_http.h  zx_json.h  zx_logger.h  zx_md5.h  zx_proc.h  zx_shm.h  zx_singleton.h  zx_str.h  zx_thread_lock.h  zx_thread_mutex.h  zx_threads.h  zx_time.h  zx_urlencode.h  zx_urlparse.h  zx_utils.h  zx_zip.h
libs/x64/: libcurl.lib
libs/x86/: gtest.lib  libbase1.lib  libcurl.lib  zlibstatic.lib
tests/: 1.txt  2.txt  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  main.cc
tests/Release/: testsuite.pch
tests/Release/testsuite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  testsuite.lastbuildstate  testsuite.write.1u.tlog
tests/x64/Release/: ConsoleApplication1.pch
tests/x64/Release/ConsoleA.A98F329D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
